app-layer/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: demo-app
spec:
  tls:
  - hosts:
    - demo-app-julscloudops.ga
    secretName: demo-app-tls
  rules:
  - host: demo-app-julscloudops.ga
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: frontend
            port: 
              number: 80
